--- a/Hub/Blogs/Article_4_Internet_Art_Review_2.html
+++ b/Hub/Blogs/Article_4_Internet_Art_Review_2.html
@@ -48,16 +48,71 @@
         <div class="blog-space">
             <div class="blog-text">
                 <p>
-                    Analysis of ‘’
+                    Analysis of ‘Blind Spot’
                 </p>
                 <p>
-
+                    In Miao Ying’s piece, “Blind Spot”, Ying highlights concerns, and comments on the highly censored
+                    state of accessible internet in her home country China. What started as scholastic research, lead to
+                    the eventual creation of Ying’s physical, web affected art dictionary. Ying took on the intense task
+                    of individually searching each word in the dictionary and erasing along the way the words were
+                    censored and restricted by the country’s local laws. During the making of this piece, Ying aimed to
+                    place a spotlight on this rigid policing and the negative effects of the state’s laws that are
+                    perpetuated by communist ideals.
+                </p>
+                <p>
+                    The existence of ‘Blind Spot’ can be considered an artifact as it crosses the two temporal spaces in
+                    its finality (Taylor, 2009). The dictionary itself, being a version pre-communist China, and its now
+                    censored state showcasing the new acceptable discourses and language. Ying’s elaborate address of
+                    this exploitation of the ideal of upholding the whole of society, also showcases the temporal shift
+                    from pre- to post-communist China (Net Art Anthology, 2007). However, this shift was not just that
+                    of the state, but also of the population’s acceptance of these censorship regulation, and what Ying
+                    refers to as ‘self-censorship’ (ELEPHANT, 2021) – something Ying relates to Stockholm Syndrome.
+                </p>
+                <p>
+                    The annotated dictionary artwork crated by Ying was the gateway piece into her relationship with the
+                    power dynamics associated with censorship (Net Art Anthology, 2007) in her home country and her
+                    bridging into web art (ELEPHANT, 2021). Ying’s works in the net art sphere encase a certain
+                    methodology of address and comparison. Ying states how the works begin with a “digital core”
+                    (ELEPHANT, 2021) that finds relation to one of the country’s communist ideologies, and from there
+                    the abstraction begins. This is easily recognizable in her work, ‘Blind Spot’.
+                </p>
+                <p>
+                    The digital core of the work, ‘Blind Spot’ would be the search engine, Google – or a search engine
+                    in general. This core is something used to access information of various discourses, spheres, and
+                    natures. Ying’s relation of this medium to the piece through the exploited ideal of ‘society’s best
+                    interest’ (Chu, Lau, Moriah, & Schallich, 2009), is abstracted through the exploration of censorship
+                    – the main way in which the interests of the whole are prioritized over the individual. Although
+                    this ideal is often associated with communism, and is the offered reason for the censorship, there
+                    is an extreme process behind the information that even is available for the public of China to
+                    access (Chu, Lau, Moriah, & Schallich, 2009).
+                </p>
+                <p>
+                    As Ying moved away from China and to the US, there was a newfound frustration and a lot of Ying’s
+                    following net artworks after ‘Blind Spot’ began to address, with the previously mentioned
+                    methodology, various aspects of the way Chain’s political sphere was exploiting the ideals of
+                    communism to uphold their power. Although the initial scope of Ying’s work was to explore the
+                    limitations of the dynamics caused by censorship, there has also been a movement in recent works of
+                    Ying to address the more holistic aspect of the digital limitations on the human experience
+                    (ELEPHANT, 2021). This shift has not moved Ying from her focus on the censorship issues present in
+                    China, it has instead furthered her works and allowed for a more direct address of Ying’s scope on
+                    the effect of the digital control and it’s interrelation with the censorship issues in China.
                 </p>
                 <h2>
                     References
                 </h2>
                 <p>
-
+                    Chu, R., Lau, D., Moriah, S., & Schallich, A. (2009). Communism and Computer Ethics. Retrieved from
+                    Censorship and Freedom of Speech:
+                    https://cs.stanford.edu/people/eroberts/cs181/projects/2007-08/communism-computing-china/censorship.html
+                    <br>
+                    ELEPHANT. (2021, January 29). An Audience with Miao Ying, the Artist Laughing in the Face of China’s
+                    Authorities. Retrieved from ELEPHANT:
+                    https://elephant.art/an-audience-with-miao-ying-the-artist-laughing-in-the-face-of-chinas-authorities-29012021/
+                    <br>
+                    Net Art Anthology. (2007). Blind Spot. Retrieved from Net Art Anthology:
+                    https://anthology.rhizome.org/blind-spot
+                    <br>
+                    Taylor, T. (2009). Assemblage of Play. Games and Culture, 331-339.
                 </p>
                 <button class="viewbtn">
                     <a href="https://inrahus.github.io/WSOA4175A_1827518/index.html#Blogs">
