--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
                 <a class="blog-cards-link" href="./Hub/Blogs/Article_5_Digital_Divide.html">
                     <article class="card">
-                        <figure class="card-image-5"></figure>
+                        <figure class="card-image-6"></figure>
                         <blockquote class="card-text">
                             <time>20211030</time>
 
@@ -150,7 +150,7 @@
 
                 <a class="blog-cards-link" href="./Hub/Blogs/Article_4_Internet_Art_Review_2.html">
                     <article class="card">
-                        <figure class="card-image-3"></figure>
+                        <figure class="card-image-5"></figure>
                         <blockquote class="card-text">
                             <time>20211027</time>
 
@@ -158,7 +158,7 @@
                                 Internet Art Analysis
                             </h3>
                             <p>
-                                Analysis of '' by
+                                Analysis of 'Blind Spot' by Miao Ying
                             </p>
                         </blockquote>
                     </article>
