--- a/Hub/Blogs/About.html
+++ b/Hub/Blogs/About.html
@@ -50,20 +50,17 @@
                 <p>
                     About 1827518.
                 </p>
-
-                <button class="viewbtn" href="#">
-                    <a href="#Pt2">
-                        See Updated
-                    </a>
-                </button>
-                <br>
                 <p>
-                    For this assignment, I believe I did adequately. I was able to approach the project quite well from
+                    In my previous assignment, I believe I did adequately. I was able to approach the project quite well
+                    from
                     a theoretical and technical standpoint but did lack a lot in terms of the long-term art project.
-                    Moving forward, I think that I could focus more on the development of my Internet Art and start
+                    Moving forward, I thought that I could focus more on the development of my Internet Art and start
                     implementing the use of React.JS, as well as really showcasing more of my theoretical focus and
                     develop my overarching theme of decoloniality and start exploring more of what this means in terms
                     of code, development, and the tech industry.
+                </p>
+                <p>
+                    NEW
                 </p>
                 <h2>
                     Technical
@@ -71,8 +68,8 @@
                 <p>
                     In terms of the technical work of my site, I believe I was able to adequately meet the brief.I do
                     believe that in terms of my Homepage contextualizing the project, I could do something more
-                    versatile in my Home section, that directly relates to or maybe even is the Internet Art PIECE WHEN
-                    I DEVELOP IT. However, at this stage, I think it works fine enough to show my work chronologically,
+                    versatile in my Home section, that directly relates to or maybe even is the Internet Art piece when
+                    I develop it. However, at this stage, I think it works fine enough to show my work chronologically,
                     and to cover all the necessary components.
                 </p>
                 <p>
