--- a/Hub/Blogs/Internet Art_1_Plan.html
+++ b/Hub/Blogs/Internet Art_1_Plan.html
@@ -40,7 +40,6 @@
             <li><a class="GoHome" href="https://inrahus.github.io/WSOA4175A_1827518/index.html#Home">Home</a></li>
             <li><a class="GoAbout" href="https://inrahus.github.io/WSOA4175A_1827518/index.html#About">About</a></li>
             <li><a class="GoBlogs" href="https://inrahus.github.io/WSOA4175A_1827518/index.html#GetHere">Blogs</a></li>
-            <li><a class="GoArt" href="https://inrahus.github.io/WSOA4175A_1827518/index.html#Art">Art</a></li>
         </ul>
     </nav>
 
@@ -115,7 +114,7 @@
                 </h2>
 
                 <button class="viewbtn">
-                    <a href="https://inrahus.github.io/WSOA4175A_1827518/index.html#Art">
+                    <a href="https://inrahus.github.io/WSOA4175A_1827518/index.html#Home">
                         Back
                     </a>
 
