--- a/index.html
+++ b/index.html
@@ -43,101 +43,132 @@
         </ul>
     </nav>
 
-    <div class="links-bg">
-        <p>
-            The concept of <a class="showup" href="">decoloniality</a> has existed for as long as coloniality (Walsh &
-            Mignolo, 2018).
-            The two
-            are
-            so intrinsically intertwined - and despite being suppressed - decoloniality finds itself constantly
-            creeping through the gaps of <a class="showup" href="">history</a> and bursting into current affairs. In
-            terms of knowledge,
-            decoloniality finds itself a necessary opposition to the monetized industry of tertiary education
-            across
-            the globe, particularly in South Africa.
 
-            ‘Blackness for Sale’ was a 10-day live eBay auction event by composer, and artist, Keith Townsend
-            Obadike. In this piece, Obadike, objectified and placed what is his <a class="showup"
-                href="">‘blackness’</a> for
-            sale on - what was
-            relatively still new at the time – an eCommerce site. The online act was removed four days after
-            receiving twelve bids while live, being deemed inappropriate by the hosting site (Driscoll, 2020).
-            What was initially a comment on the forceful nature of the rising World Wide Web (Croal, 2001),
-            became intrinsically <a class="showup" href="">commentative</a> on the interaction between the virtual space
-            and black <a class="showup" href="">bodies</a>, as
-            well as the intersectionality of sex and gender, and the complexity of blackness’ history (Driscoll,
-            2020), and it’s ongoing relationship with coloniality.
-
-            In Miao Ying’s piece, “Blind Spot”, Ying highlights concerns, and comments on the highly <a class="showup"
-                href="">censored</a>
-            state of accessible internet in her home country China. What started as scholastic research, lead to
-            the eventual creation of Ying’s physical, web affected <a class="showup" href="">art</a>dictionary. Ying
-            took on the intense task
-            of individually searching each word in the dictionary and erasing along the way the words were
-            censored and restricted by the country’s local laws. During the making of this piece, Ying aimed to
-            place a spotlight on this rigid <a class="showup" href="">policing</a> and the negative effects of the
-            state’s laws that are
-            perpetuated by communist ideals.
-
-            The prevalence of technology with the shift into the COVID <a class="showup" href="">pandemic</a> has become
-            paramount to the
-            continuity of the working world, as well as in the means of youth education across the globe.
-            However, the pre-existing, and ever expanding, digital <a class="showup" href="">divide</a> presented by the
-            vast difference in
-            objects of affordances across various countries, has had a tumultuous effect on the already
-            <a class="showup" href="">marginalized</a> groups of various backgrounds, creating a need to address the
-            lack of access in rural
-            communities and disadvantaged minorities.
-
-            The concept of decoloniality, tackled through knowledge, begins with the questioning of the validity
-            of
-            existing Eurocentric and Westernized <a class="showup" href="">knowledge</a> (Walsh & Mignolo, 2018) and
-            challenging the
-            detachment of
-            the known from the knower (Mbembe, 2015). By opening the <a class="showup" href="">geopolitical</a> spheres
-            - and accepting the
-            pluriversal (Walsh & Mignolo, 2018) - that have long been cast aside because of the glorification of
-            western beliefs, will allow us to redefine the bounds of knowledge across the globe and <a class="showup"
-                href="">cultures</a>,
-            and in
-            doing so we create a space where coloniality’s effects on the future become less gripping (Walsh &
-            Mignolo, 2018).
-
-            Obadike’s online <a class="showup" href="">performance</a> received various responses – some directly in
-            question of the piece,
-            particularly in terms of the relation of value of his blackness and it’s transferability across
-            genders (Croal, 2001). Participants particularly wanted to know what other “perks” were covered by
-            the transfer of his blackness, and if there would be considerations to the cost in terms of its
-            <a class="showup" href="">intersectionality</a> with sexuality and gender (Croal, 2001). In response,
-            Obadike noted that the
-            commodification of blackness is heavily influenced by gender – and so too, it would have complicated
-            his piece to add in more context regarding these intersections (Obadike, 2001). Obadike also noted
-            that the performance’s lack of visual aids, allowed for the piece was able to be fetishized and
-            resonated with audiences differently from his other works (Obadike, 2001) – and that with the
-            inclusion and regard of gender and sex, the piece would probably not have permeated in the same way
-            (Obadike, 2001).
-
-            The existence of ‘Blind Spot’ can be considered an <a class="showup" href="">artifact</a> as it crosses the
-            two temporal spaces in
-            its finality (Taylor, 2009). The dictionary itself, being a version pre-communist China, and its now
-            censored state showcasing the new acceptable <a class="showup" href="">discourses</a> and language. Ying’s
-            elaborate address of
-            this exploitation of the ideal of upholding the whole of society, also showcases the temporal shift
-            from pre- to post-communist China (Net Art Anthology, 2007). However, this <a class="showup"
-                href="">shift</a> was not just that
-            of the state, but also of the population’s acceptance of these censorship regulation, and what Ying
-            refers to as ‘self-censorship’ (ELEPHANT, 2021) – something Ying relates to Stockholm Syndrome.
-
-            Research has shown that adequate internet <a class="showup" href="">access </a>and considering the
-            <a class="showup" href="">educational</a> pairing needed for
-            this, has more benefits to rural communities, and the countries of these rural
-            communities
-            (Daniolou, 2020). Not only would internet access create digital spaces for these cultures and
-        </p>
-    </div>
 
     <main>
+        <div class="links-bg">
+            <p>
+                The concept of <a href="./Hub/Blogs/Article_1_Tackling_Decoloniality.html">decoloniality</a>
+                has existed for as long as coloniality (Walsh &
+                Mignolo, 2018).
+                The two
+                are
+                so intrinsically intertwined - and despite being suppressed - decoloniality finds itself constantly
+                creeping through the gaps of <a href="./Hub/Blogs/Article_1_Tackling_Decoloniality.html">history</a> and
+                bursting into current affairs.
+                In
+                terms of knowledge,
+                decoloniality finds itself a necessary opposition to the monetized industry of tertiary education
+                across
+                the globe, particularly in South Africa.
 
+                ‘Blackness for Sale’ was a 10-day live eBay auction event by composer, and artist, Keith Townsend
+                Obadike. In this piece, Obadike, objectified and placed his <a
+                    href="./Hub/Blogs/Article_3_Internet_Art_Review.html">‘blackness’</a> for
+                sale on - what was
+                relatively still new at the time – an eCommerce site. The <a
+                    href="./Hub/Blogs/Article_3_Internet_Art_Review.html">online</a> act was removed four days
+                after
+                receiving twelve bids while live, being deemed <a
+                    href="./Hub/Blogs/Article_3_Internet_Art_Review.html">inappropriate</a> by the hosting site
+                (Driscoll,
+                2020).
+                What was initially a comment on the forceful nature of the rising World Wide Web (Croal, 2001),
+                became intrinsically <a href="./Hub/Blogs/Article_3_Internet_Art_Review.html">commentative</a> on
+                the interaction between the
+                virtual space
+                and black <a href="./Hub/Blogs/Article_3_Internet_Art_Review.html">bodies</a>, as
+                well as the intersectionality of sex and gender, and the complexity of blackness’ history
+                (Driscoll,
+                2020), and it’s ongoing relationship with coloniality.
+
+                In Miao Ying’s piece, “Blind Spot”, Ying highlights concerns, and comments on the highly
+                <a href="./Hub/Blogs/Article_4_Internet_Art_Review_2.html">censored</a>
+                state of accessible internet in her home country China. What started as scholastic research, lead
+                to
+                the eventual creation of Ying’s physical, web affected <a
+                    href="./Hub/Blogs/Article_4_Internet_Art_Review_2.html">art</a>dictionary. Ying
+                took on the intense task
+                of individually searching each word in the dictionary and erasing along the way the words were
+                censored and restricted by the country’s local laws. During the making of this piece, Ying aimed to
+                place a spotlight on this rigid <a href="./Hub/Blogs/Article_4_Internet_Art_Review_2.html">policing</a>
+                and the negative effects of
+                the
+                state’s laws that are
+                perpetuated by communist ideals.
+
+                The prevalence of technology with the shift into the COVID <a
+                    href="./Hub/Blogs/Article_5_Digital_Divide.html">pandemic</a> has become
+                paramount to the
+                continuity of the working world, as well as in the means of <a
+                    href="./Hub/Blogs/Article_5_Digital_Divide.html">youth</a> education across the globe.
+                However, the pre-existing, and ever expanding, digital divide presented by the
+                vast difference in
+                objects of affordances across various countries, has had a tumultuous effect on the already
+                <a href="./Hub/Blogs/Article_5_Digital_Divide.html">marginalized</a> groups of various
+                backgrounds, creating a need to address the
+                lack of access in rural
+                communities and <a href="./Hub/Blogs/Article_5_Digital_Divide.html">disadvantaged</a> minorities.
+
+                The concept of decoloniality, tackled through knowledge, begins with the questioning of the validity
+                of
+                existing Eurocentric and Westernized knowledge (Walsh & Mignolo, 2018) and
+                challenging the
+                detachment of
+                the known from the knower (Mbembe, 2015). By opening the <a
+                    href="./Hub/Blogs/Article_1_Tackling_Decoloniality.html">geopolitical</a> spheres
+                - and accepting the
+                pluriversal (Walsh & Mignolo, 2018) - that have long been cast aside because of the glorification
+                of
+                western beliefs, will allow us to redefine the bounds of knowledge across the globe and
+                <a href="./Hub/Blogs/Article_1_Tackling_Decoloniality.html">cultures</a>,
+                and in
+                doing so we create a space where coloniality’s effects on the future become less gripping (Walsh &
+                Mignolo, 2018).
+
+                Obadike’s online <a href="./Hub/Blogs/Article_3_Internet_Art_Review.html">performance</a>
+                received various responses – some directly in
+                question of the piece,
+                particularly in terms of the relation of value of his blackness and it’s transferability across
+                genders (Croal, 2001). Participants particularly wanted to know what other “perks” were covered by
+                the transfer of his blackness, and if there would be considerations to the cost in terms of its
+                <a href="./Hub/Blogs/Article_3_Internet_Art_Review.html">intersectionality</a> with sexuality
+                and gender (Croal, 2001). In response,
+                Obadike noted that the
+                commodification of blackness is heavily influenced by gender – and so too, it would have
+                complicated
+                his piece to add in more <a href="./Hub/Blogs/Article_3_Internet_Art_Review.html">context</a>
+                regarding these intersections (Obadike, 2001). Obadike also
+                noted
+                that the performance’s lack of visual aids, allowed for the piece was able to be fetishized and
+                resonated with audiences differently from his other works (Obadike, 2001) – and that with the
+                inclusion and regard of gender and sex, the piece would probably not have permeated in the same way
+                (Obadike, 2001).
+
+                The existence of ‘Blind Spot’ can be considered an <a
+                    href="./Hub/Blogs/Article_4_Internet_Art_Review_2.html">artifact</a> as it crosses the
+                two temporal spaces in
+                its finality (Taylor, 2009). The dictionary itself, being a version pre-communist China, and its now
+                censored state showcasing the new acceptable <a
+                    href="./Hub/Blogs/Article_4_Internet_Art_Review_2.html">discourses</a> and language. Ying’s
+                elaborate address of
+                this exploitation of the ideal of upholding the whole of society, also showcases the temporal shift
+                from pre- to post-communist China (Net Art Anthology, 2007). However, this <a
+                    href="./Hub/Blogs/Article_4_Internet_Art_Review_2.html">shift</a> was not just
+                that
+                of the state, but also of the population’s acceptance of these censorship regulation, and what Ying
+                refers to as ‘self-censorship’ (ELEPHANT, 2021) – something Ying relates to Stockholm Syndrome.
+
+                Research has shown that adequate internet <a href="./Hub/Blogs/Article_5_Digital_Divide.html">access
+                </a>and considering the
+                <a href="./Hub/Blogs/Article_5_Digital_Divide.html">educational</a> pairing needed for
+                this, has more benefits to rural <a href="./Hub/Blogs/Article_5_Digital_Divide.html">communities</a>,
+                and the countries of these
+                rural
+                communities
+                (Daniolou, 2020). Not only would internet access create digital spaces for these cultures and
+            </p>
+        </div>
         <section id="Home" class="Home">
 
             <h2>
@@ -291,7 +322,6 @@
                     </article>
                 </a>
             </div>
-
         </section>
     </main>
 
