--- a/Hub/Blogs/Internet Art_1_Plan.html
+++ b/Hub/Blogs/Internet Art_1_Plan.html
@@ -113,6 +113,12 @@
                     Updated (Assignment 2)
                 </h2>
 
+                <p>
+                    Although I initally wanted to create a work that would function outside the web space and be
+                    influenced by the web, I foundmyself veyr lacking in ideas. I had also proposed a digital work with
+                    imagery but how now opted for something completely diifferent.
+                </p>
+
                 <button class="viewbtn">
                     <a href="https://inrahus.github.io/WSOA4175A_1827518/index.html#Home">
                         Back
