--- a/Hub/Blogs/Internet Art_1_Plan.html
+++ b/Hub/Blogs/Internet Art_1_Plan.html
@@ -112,13 +112,88 @@
                 <h2 id="Pt2">
                     Updated (Assignment 2)
                 </h2>
-
                 <p>
-                    Although I initally wanted to create a work that would function outside the web space and be
-                    influenced by the web, I foundmyself veyr lacking in ideas. I had also proposed a digital work with
-                    imagery but how now opted for something completely diifferent.
+                    Considering the feedback I received, I completely scrapped my initial idea and went back to the
+                    drawing board. I was still very inspired by the same works of Mendi Obadike (Obadike, 2001) and Miao
+                    Ying (Ying , 2007) and wanted to really incorporate those work into a working unique piece. This
+                    time, I wanted to really try and focus on the methodology presented by Ying which I discovered doing
+                    extra research (ELEPHANT, 2021), and discussed in my analysis of her work, “Blind Spot” (Pillay,
+                    Analysis of ‘Blind Spot’, 2021). In this method, Ying first identifies a core digital aspect and
+                    then relates it to a topic, and from there abstracts it into an artwork (ELEPHANT, 2021).
                 </p>
-
+                <p>
+                    In this way, I first identified the medium I wanted to work with. In trying to bridge the aspects of
+                    influence from Ying and Obadike, I noted Ying’s use of the dictionary and from there, the idea
+                    sparked to use Urban Dictionary – an influence on whatever work I would make, as it would not exist
+                    without the internet, and had not existed before it. The topics I mainly wanted to deal with on this
+                    site were from my academic area, and particularly the relations of decolonization, and the need to
+                    decolonize and create accessible technology. With the influence of, and constant re-interaction
+                    with, Obadike’s work, I decided to pursue something along the line of random generated words, with
+                    links that if clicked, would lead to the Urban dictionary definitions for the key terms of my
+                    discourse focus for this artwork.
+                </p>
+                <p>
+                    However, implementing this standard link generator did not work in an aesthetic manner, and
+                    considering the feedback which classed my site as very detached, I looked for ways to remove the
+                    idea of the work being confined to one section. Tackling this problem, I came up with the idea of
+                    using a text background that the content of my site would lay over, and then using CSS to hide the
+                    text and only have set responses for the key terms, making them links. At first, I really struggled
+                    with getting the links to work, and eventually figured that my use of the z-index was incorrect and
+                    managed to achieve the work I have up now.
+                </p>
+                <p>
+                    The only major issues I really have with this piece are, first, the About section’s flex nature does
+                    not allow it to be affected by the z-index and so I am struggling with the layout I want to achieve
+                    – and secondly, this piece functions (as I’ve tried to work with the previous issue) mostly only on
+                    desktop and larger screens. The third would be the face that some of the links arent accessibile
+                    because they are behind other elemrnts, but with the repeating nautre of most of the ters used, I am
+                    not to concerned with this. I am still
+                    struggling to address the first issue and it is visible in
+                    the way the words and text overlap, but I have decided to make the words somewhat visible on the
+                    background and on tap or hover, it becomes less transparent. Although I haven’t had the opportunity
+                    to test this, I believe it will, or at least has the potential to breach the mobile issue. Moving
+                    forward, I will try to see what I can do about the overlap in the About section.
+                </p>
+                <p>The text I have used was from my first blog post on the site, “Tackling Decoloniality” (Pillay,
+                    Tackling Decoloniality, 2021). Because I want this artwork to focus on decoloniality, and still be
+                    very original work, I decided to use my piece and link all the words, even repetitions, to their
+                    definitions on Urban dictionary to comment on the way that even though such topics are not new to
+                    contemporary culture, they remain relevant, and they are seeked out by the youth and incoming
+                    generations. The use of Urban dictionary may initially have been inspired by Ying’s piece, and the
+                    final layout by Obadike, but I do believe the commentary that I am trying to achieve about the
+                    continuous relevant of such discourse – and showcasing it to interacts stands to work as a piece of
+                    internet art.
+                </p>
+                <p>
+                    Although my idea has changed drastically, I hope this piece has provided a clearer scope of my
+                    intentions for this piece. As it functions now, it serves to showcase the contemporary relevance of
+                    decolonization, and functions as a bridging between the works of Obadike and Ying. Moving forward
+                    with this piece, I think I wanted it to function more intersection ally, and by this, I mean to
+                    bring in more text pieces from my other work into the layer, and work to identify more terms that
+                    relate to decolonial theory in them, regardless of how few terms there may be.
+                </p>
+                <h2>
+                    References
+                </h2>
+                <p>
+                    ELEPHANT. (2021, January 29). An Audience with Miao Ying, the Artist Laughing in the Face of China’s
+                    Authorities. Retrieved from ELEPHANT:
+                    https://elephant.art/an-audience-with-miao-ying-the-artist-laughing-in-the-face-of-chinas-authorities-29012021/
+                    <br>
+                    Obadike, M. L. (2001). keeping up appearances. Retrieved from Rhizome:
+                    https://webenact.rhizome.org/keeping-up-appearances/20151029152713/http://blacknetart.com/keepingupappearances.html
+                    <br>
+                    Pillay, S. (2021, 10 27). Analysis of ‘Blind Spot’. Retrieved from 1827518:
+                    https://inrahus.github.io/WSOA4175A_1827518/Hub/Blogs/Article_4_Internet_Art_Review_2.html
+                    <br>
+                    Pillay, S. (2021, 09 23). Internet Art Proposal. Retrieved from 1827518:
+                    https://inrahus.github.io/WSOA4175A_1827518/Hub/Blogs/Internet%20Art_1_Plan.html
+                    <br>
+                    Pillay, S. (2021, September 15). Tackling Decoloniality. Retrieved from 1827518.
+                    <br>
+                    Ying , M. (2007). Blind Spot. Retrieved from Net Art Anthology, Rhizome:
+                    https://anthology.rhizome.org/blind-spot
+                </p>
                 <button class="viewbtn">
                     <a href="https://inrahus.github.io/WSOA4175A_1827518/index.html#Home">
                         Back
