--- a/Hub/Blogs/Article_2_Site_Making.html
+++ b/Hub/Blogs/Article_2_Site_Making.html
@@ -49,6 +49,12 @@
                 <p>
                     Site Making
                 </p>
+                <button class="viewbtn" href="#">
+                    <a href="#Pt2">
+                        See Updated
+                    </a>
+                </button>
+                <br>
                 <p>
                     For this site making, I was more focused on developing a working responsive site with more
                     theoretical focus - as compared to last year, where I really played around with colour, visuals and
@@ -118,6 +124,15 @@
                     <br>
                     Pillay, S. (2020). vis.co - Website Design. Retrieved from vis.co:
                     https://inrahus.github.io/WSOA3029A_1827518/Hub/About/About.html
+                </p>
+                <br>
+                <br id="Pt2">
+                <br>
+                <h2>
+                    Updated (Assignment 2)
+                </h2>
+                <p>
+
                 </p>
                 <button class="viewbtn">
                     <a href="https://inrahus.github.io/WSOA4175A_1827518/index.html#Blogs">
