--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
         <section id="Home" class="Home">
 
             <h2>
-                Lastest
+                Updated & Ongoing
             </h2>
 
             <div class="blog-cards">
